# TrustMed

./: .gitignore  README.md  main.py  pyproject.toml
api/: config.py  dependencies.py  models.py
api/routes/: chat_routes.py
api/services/: rag_service.py
config/: rag_config.py
data/evaluation/articles/: article_10.txt  article_11.txt  article_12.txt  article_13.txt  article_14.txt  article_15.txt  article_16.txt  article_17.txt  article_18.txt  article_19.txt  article_2.txt  article_20.txt  article_21.txt  article_22.txt  article_23.txt  article_24.txt  article_25.txt  article_26.txt  article_27.txt  article_28.txt  article_29.txt  article_3.txt  article_30.txt  article_31.txt  article_32.txt  article_33.txt  article_34.txt  article_35.txt  article_36.txt  article_37.txt  article_38.txt  article_39.txt  article_4.txt  article_40.txt  article_41.txt  article_42.txt  article_43.txt  article_44.txt  article_45.txt  article_46.txt  (+9 more)
data/evaluation/articles_test/: article_1.txt
data/evaluation/chunk_size_1024/: stats.txt
data/evaluation/chunk_size_1024_hybrid_search_rerank/: stats.txt
data/evaluation/chunk_size_256/: stats.txt
data/evaluation/chunk_size_256_hybrid_search_rerank/: stats.txt
data/evaluation/chunk_size_512/: stats.txt
data/evaluation/hybrid_search/: stats.txt
data/evaluation/hybrid_search_rerank/: stats.txt
data/evaluation/hybrid_search_rerank_top_4/: stats.txt
data/evaluation/mxbai_large_embedding_chunk_size_1024_hybrid_search_rerank/: stats.txt
data/evaluation/mxbai_large_embedding_chunk_size_256_hybrid_search_rerank/: stats.txt
data/evaluation/mxbai_large_embedding_hybrid_search_rerank/: stats.txt
data/evaluation/query_rewrite/: stats.txt
evaluate/: construct_dataset.py  evaluate.py  generate_question_answer.py  generate_question_context_pairs.py
frontend/: streamlit_app.py
rag/: chroma.py
scripts/: autodl_bashrc  install.sh
src/: config.py
src/api/: app.py  dependencies.py  main.py  models.py
src/config/: data_dir.py  model_provider.py  profile.py
src/evaluation/: calc_score.py  create_evaluation_dataset.py  evaluate_rag.py  generate_qa_testset.py
src/notebook/: README.md  basic-sft.ipynb  sft.ipynb
src/rag/: chroma_index.py  config.py  rag_engine.py  types.py
src/utils/: extract_articles.py  get_profile.py  llm_api.py  model_provider.py
tools/: extract_articles.py  get_llm.py
(+3 files in other folders)
